objects/AcctSeed__AP_Credit_Memo__c.object
<CustomObject>
    <description>Used to document the relationship an payable credit memo record has with an payable invoice record. An AP credit memo record is created during the apply credit memo process.</description>
    <fields>
        <fullName>AcctSeed__Account_Payable_Credit_Memo__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Payable Credit Memo</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>The Type field of the payable must be &quot;Credit Memo&quot;.</errorMessage>
            <filterItems>
                <field>AcctSeed__Account_Payable__c.AcctSeed__Type__c</field>
                <operation>equals</operation>
                <value>Credit Memo</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>AcctSeed__Account_Payable__c</referenceTo>
        <relationshipLabel>Applied Invoices to Credit Memo</relationshipLabel>
        <relationshipName>AP_Credit_Memos</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Account_Payable_Invoice__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Payable Invoice</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>The Type field of the payable must be &quot;Invoice&quot;.</errorMessage>
            <filterItems>
                <field>AcctSeed__Account_Payable__c.AcctSeed__Type__c</field>
                <operation>equals</operation>
                <value>Invoice</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>AcctSeed__Account_Payable__c</referenceTo>
        <relationshipLabel>Applied Credit Memos to Invoice</relationshipLabel>
        <relationshipName>AP_Credit_Memos1</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Accounting_Period__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Applied Accounting Period</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>The accounting period status must be open</errorMessage>
            <filterItems>
                <field>AcctSeed__Accounting_Period__c.AcctSeed__Status__c</field>
                <operation>equals</operation>
                <value>Open</value>
            </filterItems>
            <infoMessage>The accounting period status must be open</infoMessage>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>AcctSeed__Accounting_Period__c</referenceTo>
        <relationshipLabel>AP Credit Memos</relationshipLabel>
        <relationshipName>AP_Credit_Memos</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Amount__c</fullName>
        <label>Applied Amount</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>AP Credit Memo</label>
    <nameField>
        <displayFormat>APM-{00000}</displayFormat>
        <label>AP Credit Memo Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>AP Credit Memos</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>AcctSeed__Invoice_and_Credit_Memo_Same_Payee</fullName>
        <active>true</active>
        <description>The Invoice and Credit Memo must have the same Payee.</description>
        <errorConditionFormula>AcctSeed__Account_Payable_Invoice__r.AcctSeed__Vendor__c != AcctSeed__Account_Payable_Credit_Memo__r.AcctSeed__Vendor__c ||
AcctSeed__Account_Payable_Invoice__r.AcctSeed__Contact__c != AcctSeed__Account_Payable_Credit_Memo__r.AcctSeed__Contact__c ||
AcctSeed__Account_Payable_Invoice__r.AcctSeed__Employee__c != AcctSeed__Account_Payable_Credit_Memo__r.AcctSeed__Employee__c</errorConditionFormula>
        <errorMessage>Invoice and Credit Memo must have the same Payee.</errorMessage>
    </validationRules>
</CustomObject>